# star_B_tree

./: CMakeLists.txt  Makefile  valgrind-output.txt
src/: CMakeLists.txt  EmptyQueue.cpp  EmptyQueue.hpp  main.cpp
src/headers/: #Tree_B.hpp#  .#Tree_B.hpp  Queue.hpp  Tree_B.hpp
src/templates/: Queue.tpp  Tree_B.tpp
tests/: CMakeLists.txt  test_tree_b.cpp
